--- a/package.json
+++ b/package.json
@@ -1,9 +1,32 @@
 {
-  "name": "SebsterCMS",
+  "name": "sebstercms",
   "version": "1.0.0",
   "description": "CMS",
-  "main": "main.js",
+  "main": "index.js",
   "repository": "https://github.com/Cronnay/SebsterCMS.git",
   "author": "Sebastian Berglönn <sebastianberglonn@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "nodemon": "^1.18.1"
+  },
+  "scripts": {
+    "start": "nodemon lib/index.js --exec babel-node --presets es2015,stage-2"
+  },
+  "dependencies": {
+    "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
+    "cookie-session": "^2.0.0-beta.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0",
+    "multer": "^1.3.1",
+    "mysql2": "^1.5.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^4.38.0",
+    "validator": "^10.4.0"
+  }
 }
